# osu-beatmap-downloader

./: .gitignore  Pipfile  README.md  downloader.py  pyproject.toml
osu_beatmap_downloader/: __init__.py  downloader.py
